--- a/Objectives.html
+++ b/Objectives.html
@@ -28,8 +28,8 @@
                 <ul class="d--flex">
                   <li><a href="index.html" id="active">Home</a></li>
                   <li><a href="#">Objectives</a></li>
-                  <li><a href="#">Skills</a></li>
-                  <li><a href="#">Education</a></li>
+                  <li><a href="skills.html">Skills</a></li>
+                  <li><a href="edu.html">Education</a></li>
                 </ul>
               </nav>
 
@@ -45,7 +45,10 @@
 
         </section>
 <!--------Objectives--->  
-  <section class="objectives bg--base">
+<video class="video absolute object-cover" autoplay="" muted="" loop="">
+  <source src="./vid/video.mp4">
+</video>
+  <section class="objective">
     <div class="container">
       <div class="objectives__wrapper d--flex">
         <div class="objtives__content ">
@@ -55,7 +58,7 @@
             like to work with other professionals to improve my skills as a
             future in which will allow me to further contribute in the field.</p>
         <a class="btn bg--light mt--2" href="#">LEARN MORE</a>
-        <ul class="d--flex mt--2">
+        <ul class="obj--icon d--flex gap--1 mt--2">
             <li><i class="fa-brands fa-square-facebook fa-2xl"></i></li>
             <li> <i class="fa-brands fa-facebook-messenger fa-2xl"></i></li>
             <li> <i class="fa-brands fa-tiktok fa-2xl"></i></li>
@@ -63,13 +66,15 @@
            
           </ul>
       </div>
-        <div class="skills__type">
+        <div class="skills__image">
           <img src="./img/objectives.png">
     </div>
     </div>
     </div>
     </section>
 <!----------footer-->
+
+
 
 <footer class="footer bg--dark text--light  py--3">
   
@@ -97,7 +102,7 @@
 
 
 
-<footer class="footer bg--light text--light  py--3">
+<footer class="footer bg--base text--light  py--3">
   
   <div class="container">
     <p class="border-bottom"></p>
@@ -105,18 +110,18 @@
 
       <div class="header__icons">
         <ul class="d--flex">
-          <p class="text--dark">Follow us:</p>
-          <li><i class="fa-brands fa-square-facebook fa-2xl"></i></li>
-          <li> <i class="fa-brands fa-youtube fa-2xl"></i></li>
-          <li> <i class="fa-brands fa-instagram fa-2xl"></i></li>
-          <li> <i class="fa-brands fa-facebook-messenger fa-2xl"></i></li>
+          <p class="text--light">Follow us:</p>
+          <li><i class="fa-brands fa-square-facebook fa-2xl text--light"></i></li>
+          <li> <i class="fa-brands fa-youtube fa-2xl text--light"></i></li>
+          <li> <i class="fa-brands fa-instagram fa-2xl text--light"></i></li>
+          <li> <i class="fa-brands fa-facebook-messenger fa-2xl text--light"></i></li>
         </ul>
        
       </div>
 
 
 
-    <div class="footer__icons text--dark  ">
+    <div class="footer__icons text--light  ">
       <p >ⒸCreative Portfolio Design</p>
         <div>
   
