--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <ul class="d--flex">
                   <li><a href="#" id="active">Home</a></li>
                   <li><a href="Objectives.html">Objectives</a></li>
-                  <li><a href="#">Skills</a></li>
-                  <li><a href="#">Education</a></li>
+                  <li><a href="skills.html">Skills</a></li>
+                  <li><a href="edu.html">Education</a></li>
                 </ul>
               </nav>
 
@@ -40,9 +40,7 @@
               </div>
 
             </div>
-            
           </header>
-
         </section>
 
 
@@ -54,8 +52,8 @@
       <div class="container">
         <div class="services__wrapper">
          <div class="services__item">
-          <h2 class="text--dark  py--3"><span>I'M </span><br><span>ALLAN ASICAN</span><br>WEB DEVELOPER</h2>
-          <a class="btn bg--light" href="#">LEARN MORE</a>
+          <h2 class="py--3"><span>I'M </span><br><span>ALLAN ASICAN</span><br>WEB DEVELOPER</h2>
+          <a class="button bg--base text--light" href="#">LEARN MORE</a>
         </div>
           <div class="services__content">
             <img src="./img/banner.png">
@@ -82,7 +80,7 @@
     </div>
     </section>
 <!--------Skills--->  
-  <section class="skills bg--base">
+  <section class="skills bg--base items--center">
     <div class="container">
       <div class="skills__wrapper d--flex">
         <div class="skills__content ">
@@ -124,7 +122,7 @@
 
 
 
-<footer class="footer bg--light text--light  py--3">
+<footer class="footer bg--base text--light  py--3">
   
   <div class="container">
     <p class="border-bottom"></p>
@@ -132,18 +130,18 @@
 
       <div class="header__icons">
         <ul class="d--flex">
-          <p class="text--dark">Follow us:</p>
-          <li><i class="fa-brands fa-square-facebook fa-2xl"></i></li>
-          <li> <i class="fa-brands fa-tiktok fa-2xl"></i></li>
-          <li> <i class="fa-brands fa-instagram fa-2xl"></i></li>
-          <li> <i class="fa-brands fa-facebook-messenger fa-2xl"></i></li>
+          <p class="text--light">Follow us:</p>
+          <li><i class="fa-brands fa-square-facebook fa-2xl text--light"></i></li>
+          <li> <i class="fa-brands fa-tiktok fa-2xl text--light"></i></li>
+          <li> <i class="fa-brands fa-instagram fa-2xl text--light"></i></li>
+          <li> <i class="fa-brands fa-facebook-messenger fa-2xl text--light"></i></li>
         </ul>
        
       </div>
 
 
 
-    <div class="footer__icons text--dark  ">
+    <div class="footer__icons   ">
       <p >ⒸCreative Portfolio Design</p>
         <div>
   
